# cpp_devNotebook

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  QUICK_START.md  README.md  main.cpp  migrate.sh  webbrowser.cpp
.github/workflows/: c-cpp.yml  ci.yml  hello.yml  test.yml
Array/: 1_terminalCalendar.cpp  2_stackDemonstration.cpp  3_EnrollmentSystem.cpp
docs/: ARCHITECTURE.md  LEARNING_PATH.md  ai-implementations.md
docs/ai-implementations/: RESTRUCTURE_LOG.md  historical-log.md
docs/topics/: arrays.md  header-files.md  keywords.md  loops.md  oop-basics.md  range-based-loops.md  useful-functions.md
dsa/: Valenzuela_class_stack_activity.cpp
dsa/Array/: 2_stackDemonstration.cpp  settings.json
examples/: CMakeLists.txt
gfg-Trials/: Arithmetric Progression.cpp  Day before N days.cpp  Formula Evaluation.cpp  Terms.md  useful func.md  useful operator.md
gfg-Trials/Arrays/: Array Traversals.cpp  ArrayExercise.cpp  arrayElemetsModify.cpp
gfg-Trials/Flow Control/: Notes.md
gfg-Trials/Functions/: functions.cpp
gfg-Trials/Loops/: Divisibility.cpp  Have Fun with XOR.cpp  Loops.md  SquarePattern.cpp  TrianglePattern.cpp  decimal to binary.cpp  math v2.cpp  math.cpp
gfg-Trials/Object-Oriented Programming/: arithmetic.cpp  basic constructor.cpp  class.cpp  classSample.cpp  classesAndClassMembers.cpp  oop desc.md
gfg-Trials/Operators/: Modulo Operator.cpp
gfg-Trials/Reference/: L and R Values.md  reference.md
gfg-Trials/Strings/: String substring.cpp  converter.cpp  palindrome.cpp  patternSearch.cpp  reverseStrings.cpp  strings.md
gfg-Trials/multi dimensional array/: Creating 2D Arrays Dynamically.cpp  Passing 2D arrays as arguments.cpp  diagonal sum.cpp  middle swapp.cpp  multidimensional array.md  multiplication of matrices.cpp  transpose of a matrix v2.cpp  transposition of matrix.cpp  variable size 2d array.cpp
gfg-Trials/pointers/: address.cpp  array pointers and parameters.cpp  person.cpp  pointers.cpp  pointers.md  ptr trickQ.cpp
gfg-Trials/struct n union/: area.cpp  ptrToStructure.cpp  shoeStruct.cpp
gfg-Trials/templates/: Generic Sort.cpp  Non-Type Param.cpp  finding min element.cpp  fun.cpp  max.cpp  maxElem in an Array.cpp  pair-Class.cpp  template.md
include/utils/: common.h
src/data-structures/: CMakeLists.txt
src/fundamentals/: CMakeLists.txt
src/fundamentals/advanced/pointers/: array-pointers-and-parameters.cpp  person.cpp  ptr-arithmetic.cpp  ptr-trick-q.cpp  vectors.cpp
src/fundamentals/advanced/references/: reference.cpp
src/fundamentals/advanced/templates/: fun-struct.cpp  max-elem in an -array.cpp  maximum func template.cpp  non--type -param.cpp
src/fundamentals/beginner/flow-control/: fizzbuzz-program.cpp
src/fundamentals/beginner/loops/: decimal-to-binary.cpp  digital-root.cpp  indices.cpp  math.cpp  square-pattern.cpp  triangle-pattern.cpp
src/fundamentals/beginner/operators/: arithmetic-progression.cpp  for-loops.cpp  geometric-progressions.cpp
src/gfg-Trials/Object-Oriented Programming/: operatorOverloading.cpp
src/gfg-Trials/Object-Oriented Programming/friendfunction/: friendClass.cpp  friendfunc.md
src/gfg-Trials/Object-Oriented Programming/static/inheritannce/: Base and Derived Class Constructor.cpp  cuboidAndVol.cpp  diamondProblem.cpp  multi-level-Inheritance.cpp  notes.md  sampleInheritance.cpp
src/gfg-Trials/Operators/: operators.md
src/oop/: CMakeLists.txt
src/oop/advanced/static-members/: static-member-function.cpp
src/oop/beginner/classes/: class.cpp  classes-and-class-members.cpp  new-file.cpp
src/oop/beginner/constructors/: constructor-with-initializer.cpp  manual-swap.cpp  shallow-vs-deep.cpp
src/projects/: CMakeLists.txt
tests/: README.md
